# open-streetmap-mcp

./: .dockerignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
src/osm_mcp_server/: server.py
