[project]
name = "osm-mcp-server"
version = "0.1.1"
description = "An OpenStreetMap MCP server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
 "aiohttp>=3.11.13",
 "fastmcp>=0.2.0",
]
[[project.authors]]
name = "Jagan Shanmugam"
email = "jaganshanmugam@outlook.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
osm-mcp-server = "osm_mcp_server:main"
